Added test result printer and failing return code to all test related main methods. Added module test script for ext prov and normal prov.