@@ -1,8 +1,19 @@
 #!/bin/sh
 
+if ! [ -x "$(command -v openjdk_11)" ]; then
+    JAVA_11=/usr/lib/jvm/java-11-openjdk-amd64
+  else
+    JAVA_11=`openjdk_11`
+fi
+
+
+export JAVA_HOME=$JAVA_11
+
 artifactsHome=build/artifacts/jdk1.8/jars
 
-testJar="$artifactsHome/bctest-jdk18on-173b02.jar";
+tj=( $artifactsHome/bctest-jdk18on-*.jar )
+
+testJar="${tj[0]}";
 
 rm -rf mtest
 mkdir mtest
@@ -13,8 +24,21 @@ rm mtest/bcjmail-*
 rm mtest/bcprov-ext-*
 rm mtest/bctest-*
 
-a=(`jar -tf "$testJar" | grep -E "AllTests\.class" | sed -e 's!.class!!' | sed -e 's|/|.|g'`);
 
+for j in mtest/*.jar; do
+jar -tf $j | grep module-info\.class >> /dev/null
+
+if [[ $? != 0 ]]; then
+    echo "$j is missing module-info"
+    exit 1;
+else
+     echo "$j is has module-info"
+fi
+
+done
+
+
+a=(`$JAVA_HOME/bin/jar -tf "$testJar" | grep -E "AllTests\.class" | sed -e 's!.class!!' | sed -e 's|/|.|g'`);
 
 
 echo $testJar
@@ -29,7 +53,7 @@ do
   esac
 
 
-   java --module-path ./mtest/ \
+   $JAVA_HOME/bin/java --module-path ./mtest/ \
    --add-modules org.bouncycastle.mail \
    --add-modules org.bouncycastle.pg \
    --add-modules org.bouncycastle.pkix \
@@ -40,26 +64,31 @@ do
    --add-opens org.bouncycastle.provider/org.bouncycastle.jcajce.provider.digest=ALL-UNNAMED \
    --add-opens org.bouncycastle.util/org.bouncycastle.asn1.cmc=ALL-UNNAMED \
    --add-opens org.bouncycastle.util/org.bouncycastle.oer.its.etsi102941.basetypes=ALL-UNNAMED \
+   --add-opens org.bouncycastle.util/org.bouncycastle.oer.its.etsi102941=ALL-UNNAMED \
+   --add-opens org.bouncycastle.util/org.bouncycastle.oer.its.ieee1609dot2dot1=ALL-UNNAMED \
+   --add-opens org.bouncycastle.util/org.bouncycastle.oer.its.etsi103097.extension=ALL-UNNAMED \
+   --add-opens org.bouncycastle.util/org.bouncycastle.oer.its.etsi103097=ALL-UNNAMED \
+   --add-opens org.bouncycastle.util/org.bouncycastle.oer.its.ieee1609dot2.basetypes=ALL-UNNAMED \
+   --add-opens org.bouncycastle.util/org.bouncycastle.oer.its.ieee1609dot2=ALL-UNNAMED \
+   --add-opens org.bouncycastle.pkix/org.bouncycastle.tsp=ALL-UNNAMED \
    --add-reads org.bouncycastle.mail=ALL-UNNAMED \
+   --add-reads org.bouncycastle.provider=ALL-UNNAMED \
    --add-exports org.bouncycastle.provider/org.bouncycastle.internal.asn1.cms=ALL-UNNAMED \
    --add-exports org.bouncycastle.provider/org.bouncycastle.internal.asn1.bsi=ALL-UNNAMED \
    --add-exports org.bouncycastle.provider/org.bouncycastle.internal.asn1.eac=ALL-UNNAMED \
    -cp "$testJar:libs/junit.jar:libs/mail.jar:libs/activation.jar" \
    -Dbc.test.data.home=core/src/test/data \
     $i
+
+    if [[ $? != 0 ]]; then
+            echo ""
+            echo "--------------------------------!!!"
+            echo "$i failed"
+            exit 1;
+    fi
+
     echo "-------------------------------------"
     echo ""
 done
 
 
-
-
-#  java --module-path `pwd` \
-#   --illegal-access=warn \
-#   --add-modules org.bouncycastle.pg \
-#   --add-exports org.bouncycastle.pg/org.bouncycastle.gpg.test=junit \
-#   --add-exports org.bouncycastle.pg/org.bouncycastle.openpgp.test=junit \
-#   --add-exports org.bouncycastle.pg/org.bouncycastle.openpgp.examples.test=junit \
-#   --add-reads org.bouncycastle.pg=ALL-UNNAMED \
-#   --patch-module org.bouncycastle.pg=../$1:../$2 \
-#    $i
